@@ -10,6 +10,7 @@ return array(
 	'tx_reports_report' => $extensionPath . 'interfaces/interface.tx_reports_report.php',
 	'tx_reports_module' => $extensionPath . 'mod/index.php',
 	'tx_reports_reports_status' => $extensionPath . 'reports/class.tx_reports_reports_status.php',
+	'tx_reports_reports_status_typo3status' => $extensionPath . 'reports/status/class.tx_reports_reports_status_typo3status.php',
 	'tx_reports_reports_status_systemstatus' => $extensionPath . 'reports/status/class.tx_reports_reports_status_systemstatus.php',
 	'tx_reports_reports_status_securitystatus' => $extensionPath . 'reports/status/class.tx_reports_reports_status_securitystatus.php',
 	'tx_reports_reports_status_configurationstatus' => $extensionPath . 'reports/status/class.tx_reports_reports_status_configurationstatus.php',
